--- a/index.html
+++ b/index.html
@@ -1,87 +1,28 @@
+<!DOCTYPE html>
 <html lang="pt-br">
-<head>
-<meta charset="utf-8"/>
-<title>MUSEU DIGITAL DA COMPUTAÇÃO</title>
-	<link rel="stylesheet" type="text/css" href="css/estilo.css"/>
-	<title>MUSEU DIGITAL DA COMPUTAÇÃO</title>
-
-
-				<!-- // PAGINA PRINCIPAL -->
-
-<div id=interface>	
-<script type="text/javascript">
-function exibe(id) {
-	if(document.getElementById(id).style.display=="none") {
-		document.getElementById(id).style.display = "inline";
-	}
-	else {
-		document.getElementById(id).style.display = "none";
-	}
-}
-</script>
-<header id="paginaprincipal">
-	<hgroup>
-	<h4>MUSEU DIGITAL DA COMPUTAÇÃO</h4>
-	<h2>BEM VINDO AO MUSEU DIGITAL DA COMPUTAÇÃO</h2>
-	<p>Embarque em uma viagem pela história da computação e conheça as invenções que tornaram essa área tão grandiosa.</p>
-	<p>Desenvolvido com carinho pelo curso de Sistema de Informação ITPAC</p>
-	</hgroup>
-	</header>
-
-	</div>
-
-<a href="#" onclick="javascript: exibe('conteudo');">VAMOS LÁ!</a><br />
-<br />
-
-
-				<!-- // CONTEUDO -->
-
-
-</head>
-
+  <head>
+    <meta charset="utf-8" content="">
+    <meta name="description" content="Museu Digital da Computação"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="keywords" content="museu, digital, computação, tecnologia, história, gerações, invenções, museum, digital, computer, technology, history, generations, inventions" />
+    <meta name="author" content="1º Período Sistemas de Informação - ITPAC Araguaína" />
+    <title>Museu Digital da Computação - Início</title>
+    <!-- Favicons -->
+    <link rel="icon" href="images/favicon/favicon-32x32.png" sizes="32x32">
+    <!-- Fonts -->
+    <link href="fonts/faw/faw.css" media="all" rel="stylesheet" type="text/css">
+    <!-- CSS -->
+    <link href="css/reset.css" media="all" rel="stylesheet" type="text/css">
+    <link href="css/home/header.css" media="all" rel="stylesheet" type="text/css">
+	  <link href="css/materialize.min.css" media="all" rel="stylesheet" type="text/css">
+    <link href="css/Roboto.css" media="all" rel="stylesheet" type="text/css">
+  </head>
 <body>
-<div id="conteudo" style="display: none;"> 
-<section class="intro">
-  <div class="container">
-    <h1>INÍCIO</h1>
-  </div>
-</section>
-<section id="cd-timeline" class="cd-container">
-    <div class="cd-timeline-block">
-      <div class="">
-        <img src="" alt="">
-      </div> 
-      <div class="cd-timeline-content">
-        <h2>Àbaco</h2>
-        <p>O ábaco é um instrumento bem sucedido que foi inventado pelos mesopotânicos e depois aperfeiçoado pelos chineses para facilitar os cálculos, pois com o passar do tempo foi surgindo a necessidade de "contar"...</p>
-        <a href="#0" class="cd-read-more">LEIA MAIS</a>
-      </div> <!-- cd-timeline-content -->
-    </div> <!-- cd-timeline-block -->
-
-    <div class="cd-timeline-block">
-        <div class="">
-              <img src="" alt="">
-        </div>
-
-      <div class="cd-timeline-content">
-        <h2>Máquina Analítica</h2>
-        <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante de é que...</p>
-        <a href="#0" class="cd-read-more">LEIA MAIS</a>
-      </div> <!-- cd-timeline-content -->
-    </div> <!-- cd-timeline-block -->
-
-    <div class="cd-timeline-block">
-          <div class="">
-              <img src="" alt="">
-        </div>
-      <div class="cd-timeline-content">
-        <h2>Máquina de Turing</h2>
-        <p>O primeiro destaque da vida de Turing veio quando ele estava perto dos 30 anos. Trabalhando em conjunto com uma organização inglesa, o matemático foi capaz de criar um sistema para traduzir os textos encriptados pelos alemães...</p>
-        <a href="#0" class="cd-read-more">LEIA MAIS</a>
-      </div> <!-- cd-timeline-content -->
-    </div> <!-- cd-timeline-block -->
-  </section> <!-- cd-timeline -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
+  
+  <!-- Scripts -->
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <script>if (!window.jQuery) { document.write('<script src="https://code.jquery.com/jquery-2.1.4.min.js"><\/script>'); }</script>
+  <script src="js/materialize.min.js"></script>
+  <script src="js/materialize.js"></script>
 </body>
 </html>
