Add pastes and update styles

--- a/index.html
+++ b/index.html
@@ -13,16 +13,37 @@
     <link href="fonts/faw/faw.css" media="all" rel="stylesheet" type="text/css">
     <!-- CSS -->
     <link href="css/reset.css" media="all" rel="stylesheet" type="text/css">
-    <link href="css/home/header.css" media="all" rel="stylesheet" type="text/css">
-	  <link href="css/materialize.min.css" media="all" rel="stylesheet" type="text/css">
+    <link href="css/home/fullscreen-cover.css" media="all" rel="stylesheet" type="text/css">
+    <link href="css/header.css" media="all" rel="stylesheet" type="text/css">
+    <link href="css/materialize.min.css" media="all" rel="stylesheet" type="text/css">
     <link href="css/Roboto.css" media="all" rel="stylesheet" type="text/css">
   </head>
 <body>
-  
+  <div id="wrapper">
+    <div id="content" class="cover-image">
+      <!-- <div class="fullscreen-cover"> -->
+        <!-- <div ></div> -->
+      <!-- </div> -->
+    </div>
+    <!-- content -->
+  </div>
+  <!-- wrapper -->
+  <header>
+      <div class="navbar">
+        <div class="fluid-container clearfix">
+          <div class="fluid-logo">  
+            <a href="#" title="Museu Digital da Computação"><img title="Museu Digital da Computação" alt="[Museu Digital da Computação]" src="images/logo.png" class="logo"/></a>
+          </div>
+          <div class="fluid-menu">
+
+          </div>
+        </div>
+    </div>
+  </header>
+  <!-- header -->
   <!-- Scripts -->
   <script src="js/jquery-3.2.1.min.js"></script>
   <script>if (!window.jQuery) { document.write('<script src="https://code.jquery.com/jquery-2.1.4.min.js"><\/script>'); }</script>
   <script src="js/materialize.min.js"></script>
-  <script src="js/materialize.js"></script>
 </body>
 </html>
