--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- CSS -->
     <link href="css/reset.css" media="all" rel="stylesheet" type="text/css">
     <link href="css/home/fullscreen-cover.css" media="all" rel="stylesheet" type="text/css">
+    <link href="css/home/timeline.css" media="all" rel="stylesheet" type="text/css">
     <link href="css/header.css" media="all" rel="stylesheet" type="text/css">
     <link href="css/materialize.min.css" media="all" rel="stylesheet" type="text/css">
     <link href="css/Roboto.css" media="all" rel="stylesheet" type="text/css">
@@ -45,6 +46,34 @@
       </div>
     </div>
     <!-- wrapper-nav -->
+    <section class="timeline">
+    <div class="container clearfix">
+      <ul>
+        <li class="initial">
+          <div>
+            <h3>Ábaco</h3>
+            <h5>Povos Mesopotâmicos</h5>
+            <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois com o passar do tempo foi surgindo a necessidade de...</p>
+          </div> 
+        </li>
+        <li>
+          <div>
+            <h3>Ábaco</h3>
+            <h5>Povos Mesopotâmicos</h5>
+            <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois com o passar do tempo foi surgindo a necessidade de...</p>
+          </div> 
+        </li>
+        <li>
+          <div>
+            <h3>Ábaco</h3>
+            <h5>Povos Mesopotâmicos</h5>
+            <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois com o passar do tempo foi surgindo a necessidade de...</p>
+          </div> 
+        </li>
+      </ul>
+    </div>
+  </section>
+  <!-- timeline -->
   </div>
   <!-- wrapper -->
   <header>
@@ -71,6 +100,7 @@
     </nav>
   </div> -->
   <!-- fullscreen-menu -->
+
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>if (!window.jQuery) { document.write('<script src="https://code.jquery.com/jquery-2.1.4.min.js"><\/script>'); }</script>
