--- a/index.html
+++ b/index.html
@@ -11,15 +11,27 @@
     <link rel="icon" href="images/favicon/favicon-32x32.png" sizes="32x32">
     <!-- Fonts -->
     <link href="fonts/faw/faw.css" media="all" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- CSS -->
     <link href="css/reset.css" media="all" rel="stylesheet" type="text/css">
+    <link href="css/header.css" media="all" rel="stylesheet" type="text/css">
     <link href="css/home/fullscreen-cover.css" media="all" rel="stylesheet" type="text/css">
     <link href="css/home/timeline.css" media="all" rel="stylesheet" type="text/css">
-    <link href="css/header.css" media="all" rel="stylesheet" type="text/css">
     <link href="css/materialize.min.css" media="all" rel="stylesheet" type="text/css">
     <link href="css/Roboto.css" media="all" rel="stylesheet" type="text/css">
   </head>
 <body>
+  <header>
+    <div class="navbar">
+      <div class="fluid-container clearfix">
+        <div class="fluid-logo">  
+          <a href="#" title="Museu Digital da Computação"><img title="Museu Digital da Computação" alt="[Museu Digital da Computação]" src="images/logo.png" class="logo"/></a>
+          <div class="toggle-nav btn-responsive"></div>
+        </div>
+      </div>
+    </div>
+  </header>
+  <!-- header -->
   <div id="wrapper">
     <div id="content">
       <div class="fullscreen-cover">
@@ -46,60 +58,70 @@
       </div>
     </div>
     <!-- wrapper-nav -->
+    <section class="start">
+      <div class="container clearfix">
+        <i class="material-icons">flag</i>
+        <h2>Início</h2>
+      </div>
+    </section>
     <section class="timeline">
     <div class="container clearfix">
       <ul>
-        <li class="initial">
+        <li class="initial"><span class="bin-initial">0</span>
           <div>
             <h3>Ábaco</h3>
             <h5>Povos Mesopotâmicos</h5>
             <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois com o passar do tempo foi surgindo a necessidade de...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
-        <li>
+        <li><span class="one">1</span>
+          <div>
+            <h3>Máquina Analítica</h3>
+            <h5>Charles Babbage</h5>
+            <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante de tudo é que  o desenho e a estrutura básica da invenção de Babbage...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+          </div> 
+        </li>
+        <li><span class="zero">0</span>
           <div>
             <h3>Ábaco</h3>
             <h5>Povos Mesopotâmicos</h5>
             <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois com o passar do tempo foi surgindo a necessidade de...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
-        <li>
+        <li><span class="zero">0</span>
           <div>
             <h3>Ábaco</h3>
             <h5>Povos Mesopotâmicos</h5>
             <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois com o passar do tempo foi surgindo a necessidade de...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
+        <li><span class="one">1</span>
+          <div>
+            <h3>Máquina Analítica</h3>
+            <h5>Charles Babbage</h5>
+            <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante de tudo é que  o desenho e a estrutura básica da invenção de Babbage...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+          </div> 
+        </li>
+        <li><span class="one">1</span>
+          <div>
+            <h3>Máquina Analítica</h3>
+            <h5>Charles Babbage</h5>
+            <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante de tudo é que  o desenho e a estrutura básica da invenção de Babbage...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+          </div> 
+        </li>
+        <li class="end"></li>
       </ul>
     </div>
   </section>
   <!-- timeline -->
   </div>
   <!-- wrapper -->
-  <header>
-    <div class="navbar">
-      <div class="fluid-container clearfix">
-        <div class="fluid-logo">  
-          <a href="#" title="Museu Digital da Computação"><img title="Museu Digital da Computação" alt="[Museu Digital da Computação]" src="images/logo.png" class="logo"/></a>
-          <div class="toggle-nav btn-responsive"></div>
-        </div>
-      </div>
-      
-    </div>
-  </header>
-  <!-- header -->
-  <!-- <div class="fullscreen-menu">
-    <nav id='outracoisa'>
-      <div class="btn-responsive"></div>
-        <ul>
-          <li><a href="#">Início</a></li>
-          <li><a href="#">Conheça a equipe</a></li>
-          <li><a href="#">Teste</a></li>
-        </ul>
-      </div>
-    </nav>
-  </div> -->
-  <!-- fullscreen-menu -->
 
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
