--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <link href="css/Roboto.css" media="all" rel="stylesheet" type="text/css">
   </head>
 <body>
-  <header class="toggle-nav">
+  <header>
     <div class="navbar">
       <div class="fluid-container clearfix">
         <div class="fluid-logo">  
-          <a href="#" title="Museu Digital da Computação"><img title="Museu Digital da Computação" alt="[Museu Digital da Computação]" src="images/logo.png" class="logo"/></a>
+          <a href="index.html" title="Museu Digital da Computação"><img title="Museu Digital da Computação" alt="[Museu Digital da Computação]" src="images/logo.png" class="logo"/></a>
           <div class="toggle-nav btn-responsive"></div>
         </div>
       </div>
@@ -36,17 +36,22 @@
     <div id="content">
       <div class="fullscreen-cover">
         <div class="cover-image"></div>
-        <div class="container clearfix">
-          <div class="row">
-            <div class="headline center">
-              <h1>Bem vindo <br>ao <span>Museu Digital</span> da <br>Computação</h1>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
     <!-- content -->
+    <div class="headline">
+      <div class="container">
+        <h1>Bem vindo <br>ao <span>Museu Digital</span> da <br>Computação</h1>
+        <h4>Embarque em uma viagem pela história da computação e conheça as invenções que tornaram essa área tão grandiosa.</h4>
+        <a class="waves-effect waves-light btn btn-see-more">Vamos lá!</a>
+      </div>
+    </div>
+    <!-- headline -->
+    <div class="fluid-container">
+        <span class="loved">Desenvolvido com<i class="fa fa-heart"></i>pelo curso de Sistemas de Informação ITPAC</span>
+    </div>
     <div id="wrapper-nav">
+      <div id="overlay"></div>
       <div id="main">
         <nav id="menu" class="toggle-nav">
           <ul class="toggle-nav">
@@ -72,7 +77,7 @@
           <div>
             <h3>Ábaco</h3>
             <h5>Povos Mesopotâmicos</h5>
-            <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois com o passar do tempo foi surgindo a necessidade de...</p>
+            <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
@@ -80,7 +85,7 @@
           <div>
             <h3>Máquina Analítica</h3>
             <h5>Charles Babbage</h5>
-            <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante de tudo é que  o desenho e a estrutura básica da invenção de Babbage...</p>
+            <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
@@ -88,7 +93,7 @@
           <div>
             <h3>Ábaco</h3>
             <h5>Povos Mesopotâmicos</h5>
-            <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois com o passar do tempo foi surgindo a necessidade de...</p>
+            <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
@@ -96,7 +101,7 @@
           <div>
             <h3>Ábaco</h3>
             <h5>Povos Mesopotâmicos</h5>
-            <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois com o passar do tempo foi surgindo a necessidade de...</p>
+            <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
@@ -104,7 +109,7 @@
           <div>
             <h3>Máquina Analítica</h3>
             <h5>Charles Babbage</h5>
-            <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante de tudo é que  o desenho e a estrutura básica da invenção de Babbage...</p>
+            <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
@@ -112,7 +117,7 @@
           <div>
             <h3>Máquina Analítica</h3>
             <h5>Charles Babbage</h5>
-            <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante de tudo é que  o desenho e a estrutura básica da invenção de Babbage...</p>
+            <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
@@ -120,7 +125,7 @@
           <div>
             <h3>Ábaco</h3>
             <h5>Povos Mesopotâmicos</h5>
-            <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois com o passar do tempo foi surgindo a necessidade de...</p>
+            <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
@@ -128,7 +133,7 @@
           <div>
             <h3>Máquina Analítica</h3>
             <h5>Charles Babbage</h5>
-            <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante de tudo é que  o desenho e a estrutura básica da invenção de Babbage...</p>
+            <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
