Update responsive timeline and header/Add JavaScript Interations

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <!-- timeline -->
   </div>
   <!-- wrapper -->
-  
+
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>if (!window.jQuery) { document.write('<script src="https://code.jquery.com/jquery-2.1.4.min.js"><\/script>'); }</script>
@@ -179,7 +179,7 @@
             return false;
         });
     });
-  </script><!-- Scroll to Top -->
+  </script><!-- Scroll to top -->
   <script src="js/materialize.min.js"></script>
 </body>
 </html>
