Update responsive timeline and header/Add JavaScript Interations

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <li class="initial"></li>
         <li><span>0</span>
           <div>
-            <h3>Tábaco</h3>
+            <h3>Ábaco</h3>
             <h5>Povos Mesopotâmicos</h5>
             <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
