--- a/index.html
+++ b/index.html
@@ -77,55 +77,55 @@
           <div>
             <h3>Ábaco</h3>
             <h5>Povos Mesopotâmicos</h5>
-            <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois...</p>
+            <p>Mas, o que é esse Ábaco? Ele é formado por uma moldura com bastões ou arames paralelos dispostos no sentido vertical, onde cada posição desses bastões...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
           <div>
-            <h3>Máquina Analítica</h3>
-            <h5>Charles Babbage</h5>
-            <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante...</p>
+            <h3>Réguas de Cálculo</h3>
+            <h5>William Oughtred</h5>
+            <p>Durante vários séculos, o ábaco foi desenvolvido e aperfeiçoado se tornando a principal ferramenta de cálculo por muito tempo. Entretanto...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li><span>0</span>
           <div>
-            <h3>Ábaco</h3>
-            <h5>Povos Mesopotâmicos</h5>
-            <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois...</p>
+            <h3>Calculadora Mecânica</h3>
+            <h5>Pascal</h5>
+            <p>Seu funcionamento era baseado no uso rodas interligadas e giravam na realização dos cálculos. Ele a construiu para ajudar seu pai...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li><span>0</span>
           <div>
-            <h3>Ábaco</h3>
-            <h5>Povos Mesopotâmicos</h5>
-            <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois...</p>
+            <h3>Calculadora Mecânica Universal</h3>
+            <h5>Leibnitz</h5>
+            <p>O matemático alemão, Gottfried Wilhelm von Leibnitz aprimorou a Pascaline criando um modelo capaz também de multiplicar, dividir e extrair raízes quadradas, através de adições e ...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
           <div>
-            <h3>Máquina Analítica</h3>
-            <h5>Charles Babbage</h5>
-            <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante...</p>
+            <h3>Telégrafo</h3>
+            <h5>Samuel Morse</h5>
+            <p>Em 1753 um aparelho que empregava atração eletrostática, já tinha sido sugerido por um escritor anônimo na Revista "escoceses", e foi a base das primeiras experiências na telegrafia elétrica na Europa. Diversos equipamentos...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
           <div>
-            <h3>Máquina Analítica</h3>
-            <h5>Charles Babbage</h5>
-            <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante...</p>
+            <h3>Máquina de Tear</h3>
+            <h5>Jacquard</h5>
+            <p>No ano de 1801, um costureiro chamado Joseph Marie Jacquard, desenvolveu um sistema que revolucionaria o mundo tecnológico da época, conseguiu automatizar...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li><span>0</span>
           <div>
-            <h3>Ábaco</h3>
-            <h5>Povos Mesopotâmicos</h5>
-            <p>Ó abaco é um instrumento bem sucedido que foi inventado pelos povos mesopotâmicos e depois aprefeiçoado pelos chineses para facilitar os cálculos, pois...</p>
+            <h3>Máquina Diferencial</h3>
+            <h5>Charles Babbage</h5>
+            <p>No ano de 1822, foi publicado um artigo cientifico, que prometia revolucionar tudo que existia até então no ramo de cálculo eletrônico. O seu autor foi Charlles Babbage...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
@@ -133,7 +133,103 @@
           <div>
             <h3>Máquina Analítica</h3>
             <h5>Charles Babbage</h5>
-            <p>Desenvolvida por volta de 1834, ela foi a primeira máquina que poderia ser programada para executar vários comandos de qualquer tipo. O mais interessante...</p>
+            <p>Em torno de 1833, Babbage resolveu deixar de lado seus planos de uma Máquina de Diferenças. O insucesso, porém, não o impediu de desenvolver ideias para construir uma máquina ainda mais...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+          </div> 
+        </li>
+        <li><span>0</span>
+          <div>
+            <h3>Aritmômetro</h3>
+            <h5>Charles Xavier Thomas</h5>
+            <p>Durante sua longa estada com os exércitos de Marchall Soult, onde precisava realizar uma grande quantidade de cálculos, Charles-Xavier Thomas de Colmar concebeu a ideia do aritmômetro. Considerando máquinas...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+          </div> 
+        </li>
+        <li class="off"><span>1</span>
+          <div>
+            <h3>A Teoria de Boole</h3>
+            <h5>George Boole</h5>
+            <p>Por mais estranho que possa parecer, uma das maiores revoluções para o “mundo dos cálculos”, não foi nenhuma máquina milagrosa ou a evolução das já existentes – mas sim uma teoria. A publicação de dois...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+          </div> 
+        </li>
+         <li class="off"><span>1</span>
+          <div>
+            <h3>Cartão Perfurado</h3>
+            <h5>Herman Hollerith</h5>
+            <p>O conceito de cartões desenvolvido na máquina de tear programável foi muito útil para a realização do censo de 1890 nos Estados Unidos. Nessa ocasião, Herman Hollerith desenvolveu uma...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+          </div> 
+        </li>
+        <li class="off"><span>1</span>
+          <div>
+            <h3>Tabulating Machine Company </h3>
+            <h5>Herman Hollerith</h5>
+            <p>Em 1896, Hollerith criou a Tabulating Machine Company e introduziu inovações em sua descoberta. Assim, a fita de papel foi substituída por cartões, que viriam a ser o elemento...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+          </div> 
+        </li>
+        <li><span>0</span>
+          <div>
+            <h3>International Business Corporation (IBM)</h3>
+            <h5>Herman Hollerith</h5>
+            <p>Tudo começou no final do século XIX, nos Estados Unidos, quando o estatístico Herman Hollerith idealizou uma solução eficiente para acelerar o colhimento e organização de dados ...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+          </div> 
+        </li>
+        <li class="off"><span>1</span>
+          <div>
+            <h3>Transistores</h3>
+            <h5>Shockley, Bardeen e Brattain</h5>
+            <p>Em meados de 1947 e 1948, os estudos realizados por Willian Shockley, Jonh Bardeen e Walter Brattain, levam ao aparecimento de um novo componente que revolucionou o mundo da eletrônica e da informática:...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+          </div> 
+        </li>
+        <li><span>0</span>
+          <div>
+            <h3>Linguagens de Programação</h3>
+            <h5>Assembly</h5>
+            <p>[...]a programação era feita em linguagem de máquina, classificada como linguagem de baixo nível, por razão de muito se distanciar da linguagem utilizada por nós. Além de a codificação ser feita toda de acordo com o sistema binário, não...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+          </div> 
+        </li>
+        <li class="off"><span>1</span>
+          <div>
+            <h3>Compiladores</h3>
+            <h5>John Backus</h5>
+            <p>Essas linguagens de programação são digitadas em forma de texto e gravadas em um arquivo de computador (os programas). Os compiladores são responsáveis pela “tradução” destes...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+          </div> 
+        </li>
+        <li><span>0</span>
+          <div>
+            <h3>Interpretadores</h3>
+            <h5>Assembly</h5>
+            <p>Os interpretadores são programas que não geram um novo arquivo de forma que o computador possa entender as instruções. Eles leem, interpretam e executam...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+          </div> 
+        </li>
+        <li class="off"><span>1</span>
+          <div>
+            <h3>Universal Automatic Computer (UNIVAC)</h3>
+            <h5>Jonh Mauchly e J. Presper Eckert</h5>
+            <p>O UNIVAC era o primeiro computador a utilizar-se da nova tecnologia dos transistores, o que o tornou muito mais versátil e confiável que os computadores...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+          </div> 
+        </li>
+        <li class="off"><span>1</span>
+          <div>
+            <h3>Outras Inovações II Geração</h3>
+            <h5>Grace Hopper</h5>
+            <p>No ano de 1952, Grace Hopper transformou-se em uma pioneira no processamento de dados, por haver criado o primeiro compilador que ajudou a desenvolver duas linguagens de programação ...</p>
+            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+          </div> 
+        </li>
+        <li class="off"><span>1</span>
+          <div>
+            <h3>Tradic</h3>
+            <h5>Jean Howard Felker</h5>
+            <p>Em meados de 1955 conclui-se o primeiro computador totalmente transistorizado, desenvolvido no âmago da Bell Laboratories: o TRADIC. O mesmo inovou em diversos...</p>
             <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
