--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="container">
         <h1>Bem vindo <br>ao <span>Museu Digital</span> da <br>Computação</h1>
         <h4>Embarque em uma viagem pela história da computação e conheça as invenções que tornaram essa área tão grandiosa.</h4>
-        <a class="waves-effect waves-light btn btn-see-more" id="scrollToTimeline" href="#start">Vamos lá!</a>
+        <a class="waves-effect waves-light btn btn-see-more center" id="scrollToTimeline" href="#start">Vamos lá!</a>
       </div>
     </div>
     <!-- headline -->
