Add styles to the pages content

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
         <span class="loved">Desenvolvido com<i class="fa fa-heart"></i>pelo curso de Sistemas de Informação ITPAC</span>
     </div> -->
     <div id="wrapper-nav">
-      <div id="overlay"></div>
       <div id="main">
         <nav id="menu" class="toggle-nav">
           <ul class="toggle-nav">
@@ -78,7 +77,7 @@
             <h3>Ábaco</h3>
             <h5>Povos Mesopotâmicos</h5>
             <p>Mas, o que é esse Ábaco? Ele é formado por uma moldura com bastões ou arames paralelos dispostos no sentido vertical, onde cada posição desses bastões...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/abaco.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
@@ -86,7 +85,7 @@
             <h3>Réguas de Cálculo</h3>
             <h5>William Oughtred</h5>
             <p>Durante vários séculos, o ábaco foi desenvolvido e aperfeiçoado se tornando a principal ferramenta de cálculo por muito tempo. Entretanto...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/regua-calculo.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li><span>0</span>
@@ -94,7 +93,7 @@
             <h3>Calculadora Mecânica</h3>
             <h5>Pascal</h5>
             <p>Seu funcionamento era baseado no uso rodas interligadas e giravam na realização dos cálculos. Ele a construiu para ajudar seu pai...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/calculadora-mecanica.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li><span>0</span>
@@ -102,7 +101,7 @@
             <h3>Calculadora Mecânica Universal</h3>
             <h5>Leibnitz</h5>
             <p>O matemático alemão, Gottfried Wilhelm von Leibnitz aprimorou a Pascaline criando um modelo capaz também de multiplicar, dividir e extrair raízes quadradas, através de adições e ...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/calculadora-mecanica-universal.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
@@ -110,7 +109,7 @@
             <h3>Telégrafo</h3>
             <h5>Samuel Morse</h5>
             <p>Em 1753 um aparelho que empregava atração eletrostática, já tinha sido sugerido por um escritor anônimo na Revista "escoceses", e foi a base das primeiras experiências na telegrafia elétrica na Europa. Diversos equipamentos...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/telegrafo.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
@@ -609,7 +608,7 @@
   </section>
   <!-- <footer class="footer">
     <div class="container clearfix">
-      <span class="loved">Desenvolvido com<i class="fa fa-heart"></i>pelo curso de Sistemas de Informação ITPAC</span>
+      <span class="loved">Desenvolvido com<i class="fa fa-heart"></i>pelo 1º Período do curso de Sistemas de Informação ITPAC</span>
     </div>
   </footer> -->
   <!-- timeline -->
@@ -619,8 +618,6 @@
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>if (!window.jQuery) { document.write('<script src="https://code.jquery.com/jquery-2.1.4.min.js"><\/script>'); }</script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
   <script src="js/menu.js"></script>
   <script src="js/timeline.js"></script>
   <script>
