--- a/page-content/calculadora-mecanica.html
+++ b/page-content/calculadora-mecanica.html
@@ -32,7 +32,7 @@
       </div>
       <div class="container clearfix">
         <h1>Calculadora Mecânica</h1>
-        <h3>Pacal</h3>
+        <h3>Pascal</h3>
       </div>
     </div>
   </header>
