--- a/page-content/regua-calculo.html
+++ b/page-content/regua-calculo.html
@@ -40,7 +40,7 @@
 
   <article>
     <div class="container clearfix">
-        <p style="margin-top: 62px;">O ábaco era bastante útil para adição e subtração, porem multiplicação e divisão já não era tão recomendado, apenas algumas versões mais complexas que surgiram posteriormente eram capazes de resolver de uma forma mais simples esses problemas, por exemplo: A REGUA DE CALCULO, um dispositivo compacto para executar cálculos rapidamente, porém com uma precisão limitada.</p>
+        <p style="margin-top: 62px;">O ábaco era bastante útil para adição e subtração, porem multiplicação e divisão já não era tão recomendado, apenas algumas versões mais complexas que surgiram posteriormente eram capazes de resolver de uma forma mais simples esses problemas, por exemplo: As réguas de cálculo, um dispositivo compacto para executar cálculos rapidamente, porém com uma precisão limitada.</p>
         <p>Durante vários séculos, o ábaco foi desenvolvido e aperfeiçoado se tornando a principal ferramenta de cálculo por muito tempo. Entretanto, os principais intelectuais da época do renascimento precisavam descobrir maneiras mais eficientes de efetuar cálculos.</p>
         <p>Logo em 1638 d.C. um padre Inglês, Willian Oughtred criou uma tabela eficaz para a realização de grandes multiplicações. A base de sua invenção foram as pesquisas sobre logaritmos, realizadas pelo escocês JONH NAPIER.</p>
         <p>A régua de cálculo até o momento eficaz, mas muito trabalhoso e demorado de ser realizado. O mecanismo consistia de uma régua que já possuía uma certa quantidade de valores pré-calculados, 
