--- a/index.html
+++ b/index.html
@@ -181,23 +181,23 @@
             <h3>Válvulas</h3> 
             <h5>Fleming</h5>
             <p>Além de trabalhar com tensões mais altas e também quentes (elas precisam ser aquecidas antes de entrarem em funcionamento e isso pode levar até mais de 1 minuto), as válvulas apresentam outras diferenças...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a  href="page-content/valvulas.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li><span>0</span>
           <div>
             <h3>Máquina de Turing</h3> 
-            <h5>Alan Turing</h5>
+            <h5>Alan Mathison Turing</h5>
             <p>É um dispositivo imaginário que formou a estrutura para fundamentar a ciência da computação moderna. Seu inventor, o matemático Alan Mathison Turing, mostrou que a computação das operações...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/maquina-turing.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
           <div>
             <h3>Electronic Numerical Integrator And Computer (ENIAC)</h3> 
-            <h5>ENIAC</h5>
+            <h5>John Eckert e John Mauchly</h5>
             <p>O primeiro computador eletrônico digital de larga escala, o Electronic Numerical Integrator And Computer (no português quer dizer Computador e Integrador Numérico Eletrônico), ou ENIAC...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/eniac.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li><span>0</span>
@@ -205,7 +205,7 @@
             <h3>Compiladores</h3> 
             <h5>John Backus</h5>
             <p>Os primeiros computadores não usavam compiladores, porque eles tinham apenas alguns poucos opcodes (pseudocódigos) e pouca memória e os usuários entravam com código binário de máquina diretamente. No final ....</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/compiladores.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
@@ -213,7 +213,7 @@
             <h3>Interpretadores</h3> 
             <h5></h5>
             <p>Interpretadores são programas de computador que leem um código fonte de uma linguagem de programação interpretada e o converte em código executável. Seu funcionamento pode variar de acordo....</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/interpretadores.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
@@ -221,7 +221,7 @@
             <h3>Tradic</h3>
             <h5>Jean Howard Felker</h5>
             <p>Em meados de 1955 conclui-se o primeiro computador totalmente transistorizado, desenvolvido no âmago da Bell Laboratories: o TRADIC. O mesmo inovou em diversos...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/tradic.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
@@ -229,7 +229,7 @@
             <h3>Semicondutores</h3>
             <h5>Ferdinand Braun</h5>
             <p>Seu emprego é importante na fabricação de componentes eletrônicos tais como diodos, transístores e outros de diversos graus de complexidade tecnológica, microprocessadores, e nanocircuitos...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/semicondutores.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         
